# CMakeList.txt : CMake project for Algorithms, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Algorithms "main.cpp" "main.h" "hanoitowers.cpp" "hanoitowers.h" "mergesort.cpp" "mergesort.h")

# TODO: Add tests and install targets if needed.
